# snake

./: CMakeLists.txt
res/shaders/: shader.fs  shader.vs
src/: app.cpp  app.h  game.cpp  game.h  global.cpp  global.h  main.cpp  menu.cpp  menu.h  ui.cpp  ui.h
